[gd_scene load_steps=9 format=3 uid="uid://b6ahhhem18oo1"]

[ext_resource type="Script" uid="uid://b6ljsh7qbqym6" path="res://scenes/environment/spikes/spike.gd" id="1_k1lcp"]
[ext_resource type="Texture2D" uid="uid://d04mcb1j0x0lo" path="res://scenes/environment/spikes/spikes.png" id="2_q46no"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q46no"]
size = Vector2(23, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iftb"]
atlas = ExtResource("2_q46no")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q46no"]
atlas = ExtResource("2_q46no")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vyjof"]
atlas = ExtResource("2_q46no")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vsga"]
atlas = ExtResource("2_q46no")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1lcp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iftb")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q46no")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vyjof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vsga")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[node name="Spike" type="Area2D"]
script = ExtResource("1_k1lcp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(11.5, 8.5)
shape = SubResource("RectangleShape2D_q46no")

[node name="SpikeTL" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 2)
sprite_frames = SubResource("SpriteFrames_k1lcp")
animation = &"idle"
frame_progress = 0.98601

[node name="SpikeTR" type="AnimatedSprite2D" parent="."]
position = Vector2(18, 15)
sprite_frames = SubResource("SpriteFrames_k1lcp")
animation = &"idle"
frame_progress = 0.1362702

[node name="SpikeBL" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 15)
sprite_frames = SubResource("SpriteFrames_k1lcp")
animation = &"idle"
frame_progress = 0.1362702

[node name="SpikeBR" type="AnimatedSprite2D" parent="."]
position = Vector2(18, 2)
sprite_frames = SubResource("SpriteFrames_k1lcp")
animation = &"idle"
frame_progress = 0.1362702

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
